--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
   </header>
 
   <nav>
-    <a href="#">홈</a>
-    <a href="#">메뉴</a>
-    <a href="#">철학자들</a>
-    <a href="#">예약</a>
-    <a href="#">문의</a>
-  </nav>
+  <a href="index.html">홈</a>
+  <a href="menu.html">메뉴</a>
+  <a href="#">철학자들</a>
+  <a href="booking.html">예약</a>
+  <a href="#">문의</a>
+</nav>
 
   <main>
     <div class="quote">“당신의 실존을 스타일로 표현하세요.”</div>
