--- a/booking.html
+++ b/booking.html
@@ -80,7 +80,7 @@
         <option value="kant">칸트 컷</option>
         <option value="socrates">소크라테스 쉐이딩</option>
         <option value="nietzsche">니체 컬러</option>
-        <option value="plato">플라톤 업스타일</option>
+        <option value="plato">플라톤 스타일</option>
       </select>
 
       <label for="date">예약 날짜</label>
