--- a/menu.html
+++ b/menu.html
@@ -64,8 +64,8 @@
     </div>
 
     <div class="service">
-      <h2>플라톤 업스타일</h2>
-      <p>이데아의 세계를 닮은 완벽한 균형의 업스타일.</p>
+      <h2>플라톤 스타일</h2>
+      <p>이데아의 세계를 닮은 완벽한 균형의 스타일.</p>
       <p><strong>₩45,000</strong></p>
     </div>
   </main>
